# power-aggreagator

./: .gitignore  LICENSE.txt  README.md  aggregator.spec  pyproject.toml
src/power_aggregator/: __main__.py
src/power_aggregator/components/: __init__.py  actionmenu.py  draggablegraph.py  scrollablebuttons.py
src/power_aggregator/data/: __init__.py  aggregator.py  baseline.py
src/power_aggregator/data/aggregators/: ac.json  fridge.json  washer.json
src/power_aggregator/data/baselines/: baseline_a.json  baseline_b.json  no_baseline.json
src/power_aggregator/layouts/: __init__.py  mainwindow.py
