[build-system]
requires = ["setuptools >= 75.0", "setuptools_scm[toml]", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "power_aggregator"
dynamic = ["version"]
dependencies = ["numpy", "pandas", "PyQt6"]
requires-python = ">= 3.11"
authors = [{ name = "Mihail Vorobiov", email = "mihail.vorobiov@gmail.com" }]
description = "Power drag-n-drop aggregator"
readme = "README.md"
license = { file = "LICENSE.txt" }
keywords = ["power", "electricity", "energy", "analytics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache 2.0",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.optional-dependencies]
dev = ["black", "coverage", "coveralls", "isort", "pytest", "sphinx"]

[project.urls]
Repository = "https://github.com/nilmtk/nilmtk"
Download = "https://github.com/nilmtk/nilmtk/tarball/master#egg=nilmtk-dev"

[tool.setuptools]
packages = ["nilmtk"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.1.dev0+unknown"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "nilmtk/datastore/tests",
    "nilmtk/preprocessing/tests",
    "nilmtk/stats/tests",
    "nilmtk/tests",
]

[tool.black]
line-length = 120
target-version = ['py311', 'py312', 'py313']

[tool.isort]
profile = "black"
